syntax = "proto3";
package client.v1;
option  go_package = "github.com/awlsring/tailscale-cloud-exit-nodes/pkg/gen/client/v1";

service TailscaleEphemeralExitNodesService {
    rpc HealthCheck(HealthCheckRequest) returns(HealthCheckResponse) {}

    rpc ListProviders(ListProvidersRequest) returns(ListProvidersResponse) {}

    rpc GetProvider(GetProviderRequest) returns(GetProviderResponse) {}

    rpc GetDefaultProvider(GetDefaultProviderRequest) returns(GetDefaultProviderResponse) {}

    rpc ListNodes(ListNodesRequest) returns(ListNodesResponse) {}
    
    rpc GetNode(GetNodeRequest) returns(GetNodeResponse) {}

    rpc CreateNode(CreateNodeRequest) returns(CreateNodeResponse) {}

    rpc DeleteNode(DeleteNodeRequest) returns(DeleteNodeResponse) {}

    rpc StartNode(StartNodeRequest) returns(StartNodeResponse) {}

    rpc StopNode(StopNodeRequest) returns(StopNodeResponse) {}

}

message HealthCheckRequest {}

message HealthCheckResponse {
    bool health = 1;
}

message ProviderSummary {
    string id = 1;
    bool default = 2;
    string platform = 3;
}

message ListProvidersRequest {}

message ListProvidersResponse {
    repeated ProviderSummary providers = 1;
}

message GetDefaultProviderRequest {}

message GetDefaultProviderResponse {
    ProviderSummary provider = 1;
}

message GetProviderRequest {
    string id = 1;
}

message GetProviderResponse {
    ProviderSummary provider = 1;
}

enum NodeStatus {
    NODE_STATUS_UNKNOWN_UNSPECIFIED = 0;
    NODE_STATUS_STARTING = 1;
    NODE_STATUS_RUNNING = 2;
    NODE_STATUS_STOPPING = 3;
    NODE_STATUS_STOPPED = 4;
    NODE_STATUS_ERROR = 5;
}

message NodeSummary {
    string id = 1;
    string provider_id = 2;
    string platform_id = 3;
    string tailnet_id = 4;
    string location = 5;
    string created_at = 6;
    string updated_at = 7;
}

message ListNodesRequest {}

message ListNodesResponse {
    repeated NodeSummary nodes = 1;
}

message GetNodeRequest {
    string id = 1;
}

message GetNodeResponse {
    NodeSummary node = 1;
}

message CreateNodeRequest {
    string provider_id = 1;
    string region = 2;
}

message CreateNodeResponse {
    NodeSummary ephemeral_exit_node = 1;
}

message DeleteNodeRequest {
    string id = 1;
}

message DeleteNodeResponse {
    bool success = 1;
}

message StartNodeRequest {
    string id = 1;
}

message StartNodeResponse {
    bool success = 1;
}

message StopNodeRequest {
    string id = 1;
}

message StopNodeResponse {
    bool success = 1;
}
